update chroma
